# agente-auditoria-seo

./: .gitignore  README.md  pyproject.toml  urls.txt
.github/workflows/: auditoria.yml  auditoria_diaria.yml  auditoria_quincenal.yml  ci.yml
scripts/: gmail_auth.py
src/auditor_seo/: __init__.py  auditor.py  cli.py  confluence.py  correo.py  crawler.py  estado.py  gsc.py  multipagina.py
tests/: test_auditor.py  test_cli.py  test_confluence.py  test_correo.py  test_crawler.py  test_estado.py  test_gsc.py  test_reglas.py
tests/fixtures/: muestra_busqueda.html  muestra_curso.html
tests/fixtures/mini_sitio/: contacto.html  curso.html  index.html  privado.html
tests/fixtures/reglas/: canonical_b.html  pagina_contenido_mixto.html  pagina_salto_encabezados.html  pagina_thin_content.html  robots_con_sitemap.txt  sitemap.xml
