[project]
name = "auditor-seo"
version = "0.1.0"
description = "Auditor automático de SEO para UTN Centro de e-Learning"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
gsc = [
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
]
mail = [
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
auditor-seo = "auditor_seo.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
